# m68k-emu-qt

./: .gitignore  .gitmodules  CMakeLists.txt
include/: qm68k.hpp
qml/: DisassemblerView.qml  MemoryView.qml  RegisterView.qml  main.qml
src/: main.cpp  qm68k.cpp
